--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="Communication_studie_info">Do you have a keen eye and ear for the stories op people and brands? Are you creative with text and image and facinated by the world of media? Then the communication course is for you!</string>
     <string name="Tech_informatica_title">Technische Informatica Open Day</string>
     <string name="Tech_inf_first_date">April 4th, 2019</string>
+    <string name="OpendagenText">Open dagen</string>
 </resources>
