--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,20 @@
     <string name="Open">NavBar</string>
     <string name="Close">NavBar</string>
     <string name="ShareIt" />
+    <string name="back_button">Back to Homescreen</string>
+
+    <string name="weak">Weak</string>
+    <string name="mediocre">Mediocre</string>
+    <string name="reasonable">Reasonable</string>
+    <string name="strong">Strong</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="text_to_show"></string>
+    <string name="text_to_change1"></string>
+    <string name="text_to_change2"></string>
+    <string name="text_to_change3"></string>
+    <string name="change_text">Get your results now!</string>
+
     <string name="QuestionText">Questions</string>
     <string name="ShareText">Share</string>
     <string name="RouteText">Route</string>
